# codegraph

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  README.md  README.rst  build.sh  pyproject.toml  tox.ini
.github/workflows/: main.yml
codegraph/: core.py  main.py  parser.py  utils.py  vizualyzer.py
codegraph/conf/: cli.yml
codegraph/parsers/: __init__.py  base.py  python_parser.py  registry.py  rust_parser.py
codegraph/templates/: index.html  main.js  styles.css
docs/: README.rst
tests/: test_codegraph.py  test_graph_generation.py  test_known_limitations.py  test_legacy_parser_objects.py  test_package_install.py  test_parsers_and_utils.py  test_python_ast_parser_versions.py  test_python_parser_ast.py  test_utils.py  test_visualizer_helpers.py
tests/test_data/: alias_imports.py  comma_imports.py  module_a.py  module_b.py  module_c.py  vizualyzer.py
