[tool.poetry]
name = "codegraph"
version = "1.0.0"
license = "MIT"
readme = "docs/README.rst"
homepage = "https://github.com/xnuinside/codegraph"
repository = "https://github.com/xnuinside/codegraph"
description = "Tool that create a graph of code to show dependencies between code entities (methods, classes and etc)."
authors = ["xnuinside <xnuinside@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = ">=3.5"
networkx = ">=2.8"
click = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
flake8 = ">=5.0"
pre-commit = ">=2.20"
tox = ">=4.0"
twine = ">=5.0"

[tool.poetry.scripts]
codegraph = 'codegraph.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
